grml-scripts (1.0.19) unstable; urgency=low

  * grml2ram: adjust for usage with new live-initramfs layout.
    Apply patch by Moritz Augsburger for identifying /dev/cdrom.

 -- Michael Prokop <mika@grml.org>  Sun, 30 Sep 2007 16:04:31 +0200

grml-scripts (1.0.18) unstable; urgency=low

  * qma: pipe output through 'col -b' to fix issues with UTF-8.
    Thanks for the solution, wuehlmaus!

 -- Michael Prokop <mika@grml.org>  Thu, 20 Sep 2007 21:57:21 +0200

grml-scripts (1.0.17) unstable; urgency=low

  * Drop console-tools from depends and move it to grml-autoconfig
    instead.

 -- Michael Prokop <mika@grml.org>  Thu, 20 Sep 2007 17:25:16 +0200

grml-scripts (1.0.16) unstable; urgency=low

  * Change "console-tools | xbase-clients" into dependency on
    console-tools and put xbase-clients to Suggests instead.
  * Drop "runit", which very probably nobody uses at all but which
    conflicts with package runit (thanks for hint, gebi).

 -- Michael Prokop <mika@grml.org>  Thu, 20 Sep 2007 17:19:13 +0200

grml-scripts (1.0.15) unstable; urgency=low

  * grml-setkeyboard: add one further LANG=C dialog run and
    use check4root from script-functions.

 -- Michael Prokop <mika@grml.org>  Wed,  5 Sep 2007 19:08:34 +0200

grml-scripts (1.0.14) unstable; urgency=low

  * grml-setkeyboard: execute dialog using LANG=C
  * grml-setlang: execute dialog using LANC=C and adjust modification
    of /etc/default/locale according to what Debian ships now.

 -- Michael Prokop <mika@grml.org>  Wed,  5 Sep 2007 18:33:35 +0200

grml-scripts (1.0.13) unstable; urgency=low

  * iso-term: support additional arguments on the commandline so they
    reach the final terminal

 -- Michael Prokop <mika@grml.org>  Mon,  3 Sep 2007 23:31:41 +0200

grml-scripts (1.0.12) unstable; urgency=low

  * dirvish-setup: check for existence of dialog as well

 -- Michael Prokop <mika@grml.org>  Thu, 26 Jul 2007 17:21:36 +0200

grml-scripts (1.0.11) unstable; urgency=low
