@@ -2,6 +2,8 @@ grml-scripts (1.0.19) unstable; urgency=low
 
   * grml2ram: adjust for usage with new live-initramfs layout.
     Apply patch by Moritz Augsburger for identifying /dev/cdrom.
+  * Adjust prepare_ramdisk.sh and prepare_tmpfs.sh for live-initramfs.
+    [Closes: issue277]
 
  -- Michael Prokop <mika@grml.org>  Sun, 30 Sep 2007 16:04:31 +0200
 
